# acha-livro

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
templates/: base.html
tracker/: admin.py  models.py  tasks.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_rename_termo_termo_name_termo_user.py
tracker/templates/tracker/: dashboard.html  home.html  index.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_livros.py
users/templates/users/: login.html  register.html
