[project]
name = "monitor-estante"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.3",
    "django-celery-results>=2.6.0",
    "flower>=2.0.1",
    "lxml>=5.4.0",
    "lxml-html-clean>=0.4.2",
    "parsel>=1.10.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "requests-html>=0.10.0",
]
